--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cryptcurrency Academy</string>
+    <string name="app_name">"CryptoCurrency Academy"</string>
 
 
 
